--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,3 +1,6 @@
 [theme]
-primaryColor="#C5D92A"
-base="dark"
+primaryColor="#C5D92A" # Cor do SlideBar e outros elementos
+backgroundColor="#161620"
+secondaryBackgroundColor="#353541" # Cor do Sidebar
+textColor="#FFFFFF"
+base="dark" # Cor do Tema da página
